[gd_scene load_steps=2 format=3 uid="uid://ba3mbx7odtp2s"]

[ext_resource type="Script" path="res://main.gd" id="1_0i01f"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0i01f")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="ChessBoard" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 648.0
offset_bottom = 648.0
color = Color(0.411765, 0.411765, 0.411765, 1)

[node name="BoardGrid" type="GridContainer" parent="ChessBoard"]
custom_minimum_size = Vector2(624, 624)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = -312.0
offset_right = 312.0
offset_bottom = 312.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 8

[node name="Puzzle_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 844.0
offset_top = 76.0
offset_right = 948.0
offset_bottom = 139.0
text = "Puzzles"

[node name="Quit_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 845.0
offset_top = 237.0
offset_right = 951.0
offset_bottom = 296.0
text = "Quit"

[node name="Opening_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 829.0
offset_top = 157.0
offset_right = 968.0
offset_bottom = 214.0
text = "Opening Tutorial"

[connection signal="pressed" from="Puzzle_Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Quit_Button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Opening_Button" to="." method="_on_opening_button_pressed"]
